# chess-shell

./: ChangeLog  ChangeLog~  INSTALL.md  LICENSE.md  Makefile  Makefile.am  Makefile.in  README.md  bres.py  chessBoard.def  chessBoard.mod  chessPieces.py  chessShell.mod  chessShell.py  colors.def  colors.mod  config.h.in  configure  configure.ac  datatypes.mod  debug.in  m2config.def.in  mailbox.c  mailbox.def  mailbox.h  multiprocessor.c  multiprocessor.def  multiprocessor.mod  runme  runtest  stdio.c  stdio.def
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: complexmatin7.cs  initial.cs  kings.cs  matein10.cs  matein6.cs  matein6a.cs  matein6interactive.cs  matein6interactive2.cs  matein6par.cs  matein8.cs  matein8interactive.cs  matein8par.cs  queenmate.cs  rooks.cs  rooks.cs~  rooksw.cs  rooksw2.cs  taking.cs
regression-tests/: bishopmate.cs  bishopmin-1.cs  bishopmin-2.cs  bishopmin.cs  check.cs  endgame.cs  enpassent.cs  forcedraw.cs  incheck.cs  incheckbbishop.cs  incheckknight.cs  incheckqueen.cs  incheckrook.cs  incheckwbishop.cs  initial.cs  input.cs  king.cs  knight2mate.cs  knightbishop.cs  knightbishop2.cs  knightmate.cs  knightmate2.cs  knights.cs  mate.cs  matein1.cs  matein2-1.cs  matein2.cs  matein2par.cs  matein3.cs  matein3a.cs  matein3par.cs  matein3rooks.cs  matein4par.cs  matein5par.cs  matein6par.cs  matein6par2.cs  pawnpromote.cs  pawnpromote2.cs  pawnpromote2.cs~  pawnsmatein7.cs  (+8 more)
